<resources>
    <string name="app_name">P PayWell</string>
    <string name="action_settings">Settings</string>
    <string name="loading_msg" />
    <string name="connection_error_msg">No Internet connection found</string>
    <string name="ok">OK</string>
    <string name="sign_activity_name">SignupActivity</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="btn_forgot">FORGOT?</string>
    <string name="condition">By Creating a passcode, you agree to our Terms &amp; Condition and Privacy Policy</string>
    <string name="add_money_btn">Add money</string>
    <string name="send_money">Send money</string>
    <string name="request_money">Request money</string>
    <string name="ac_created">Your PayWell account has been created</string>
    <string name="done">Done</string>
    <string name="create_passcode">Create a passcode</string>
    <string name="confirm_passcode">Confirm a passcode</string>
    <string name="paywell_account">for your PayWell account</string>
    <string name="type_document">Type of Document</string>
    <string name="pass_doc">Submit document which proves that you live in Bangladesh</string>
    <string name="continue_txt">Continue</string>
    <string name="mail_sucss">Email succesfully verified</string>
    <string name="ac_secure">Your account is now even more secure</string>
    <string name="nid_again">Verify your NID again</string>
    <string name="retake_selfie">Retake your selfie again</string>
    <string name="my_details_are_captured_properly">My details are captured properly</string>
    <string name="take_a_new_picture">Take a new picture</string>
    <string name="pass_discription">Almost there! We just need to verify your identity to protect our community against financial crimes. It should only take a minute or two. You will be able to transfer money to any one and pay for any product or service after this verification.</string>
    <string name="verify_identity">Verify identity</string>
    <string name="top_up_your_account">Top up your account with ৳500 or more</string>
    <string name="topup_discription">Before we hook you up with an account, you need to top up. You can spend or withdraw this money later.</string>
    <string name="lost_access_to_your_number">Lost access to your number?</string>
    <string name="personalise_your_dashboard">Personalise your dashboard</string>
    <string name="add_or_remove_widgets_drag_to_reorder_make_it_truly_yours">Add or remove widgets. Drag to reorder. Make it truly yours</string>
    <string name="give_free_card">Give free card</string>
    <string name="account">Account</string>
    <string name="linked_accounts">Linked accounts</string>
    <string name="vault">Vault</string>
    <string name="transactions">Transactions</string>
    <string name="concierge">Concierge</string>
    <string name="insurance">Insurance</string>
    <string name="what_are_your_personal_details">What are your personal details?</string>
    <string name="what_s_your_home_address">What’s your home address</string>
    <string name="no_po_boxes_please">No PO Boxes, please</string>
    <string name="present_address">Present Address </string>
    <string name="permanent_address">Permanent address</string>
    <string name="permanent_address_req">Permanent address*</string>
    <string name="house_holding_no">House/Holding No.</string>
    <string name="village_road">Village/Road</string>
    <string name="postal_code">Postal code</string>
    <string name="and_what_s_your_primary_email">And what’s your primary email?</string>
    <string name="we_will_only_use_it_to_advise_you_for_any_important_change">We will only use it to advise you for any important change</string>
    <string name="top_up">Top up</string>
    <string name="withdraw_cash">Withdraw cash</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="schedule_transfer">Schedule transfer</string>
    <string name="linked_account_s">Linked account(s)</string>
    <string name="statement">Statement</string>
    <string name="control">Control</string>
    <string name="cards">Cards</string>
    <string name="budget">Budget</string>
    <string name="select_a_beneficiary">Select a beneficiary</string>
    <string name="choose_transfer_type">Choose transfer type</string>
    <string name="transfer_type">Transfer type</string>
    <string name="to_myself">To myself</string>
    <string name="to_another_person">To another person</string>
    <string name="to_a_business">To a business</string>
    <string name="to_a_credit_card">To a credit card</string>
    <string name="beneficiary_first_name">Beneficiary first name</string>
    <string name="beneficiary_last_name">Beneficiary last name</string>
    <string name="beneficery_type">beneficery_type</string>
    <string name="find_paywell_user">Find PayWell user</string>
    <string name="add_money">Add money</string>
    <string name="bdt">BDT</string>
    <string name="add_a_new_beneficiary">Add a new beneficiary</string>
    <string name="confirm">Confirm</string>
    <string name="add_note">Add note</string>
    <string name="adjust">Adjust</string>
    <string name="rename">Rename</string>
    <string name="repeat">Repeat</string>
    <string name="every_day">Every day</string>
    <string name="date">Date</string>
    <string name="set">Set</string>
    <string name="what_do_you_want_to_add">What do you want to add</string>
    <string name="beneficery">Beneficiary</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="nationality">Nationality</string>
    <string name="nid_verified">NID verified</string>
    <string name="selfie_verified">Selfie verified</string>
    <string name="nid_front_side">NID front side</string>
    <string name="name">Name</string>
    <string name="father_s_name">Father’s name</string>
    <string name="mother_s_name">Mother’s name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="nid_no">NID No.</string>
    <string name="nid_back_side">NID back side</string>
    <string name="address">Address</string>
    <string name="prove_that_you_re_really_anisul">Prove that you’re really Anisul</string>
    <string name="not_now">Not Now</string>
    <string name="_500">500</string>
    <string name="country">Country</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="no_fee">no fee</string>
    <string name="change">Change</string>
    <string name="auto_top_up">Auto top-up</string>
    <string name="auto_top_up_is_on">Auto top-up is on</string>
    <string name="your_account_will_be">Your account will be topped up using your bank card.</string>
    <string name="when_the_balance_falls_bellow">When the balance falls bellow:</string>
    <string name="auto_top_up_with">Auto top-up with:</string>
    <string name="_1000">1000</string>
    <string name="using">Using:</string>
    <string name="choose_your_bank">Choose your bank</string>
    <string name="adjust_auto_top_up">Adjust auto top-up</string>
    <string name="delete">Delete</string>
    <string name="card_details">Card details</string>
    <string name="card_number">Card number:</string>
    <string name="type">Type:</string>
    <string name="credit">Credit</string>
    <string name="valid_until">Valid until:</string>
    <string name="bank_name">Bank name:</string>
    <string name="edit">Edit</string>
    <string name="select_how_to_add_money">Select how to add money</string>
    <string name="current_bank_account_or_cards">Current bank account or cards</string>
    <string name="other_methods">Other methods</string>
    <string name="fees_vary">Fees vary</string>
    <string name="from_a_paywell_account">From a PayWell account</string>
    <string name="arrives_instantly">Arrives Instantly</string>
    <string name="free">Free</string>
    <string name="add_account_details">Add account details</string>
    <string name="account_number">Account number</string>
    <string name="benificiary_address">Benificiary address</string>
    <string name="mobile_number_optional">Mobile number (optional)</string>
    <string name="add_card_account_details">Add card account details</string>
    <string name="card_beneficiary_first_name">Card Beneficiary first name</string>
    <string name="card_beneficiary_last_name">Card Beneficiary last name</string>
    <string name="add_company_account_details">Add Company account details</string>
    <string name="beneficiary_company_name">Beneficiary company name</string>
    <string name="email_address_to_send_a_transfer_confirmation">Email address (to send a transfer confirmation)</string>
    <string name="add_bank_account">Add bank account</string>
    <string name="friends_on_paywell_32">Friends on PayWell - 32</string>
    <string name="friends_in_address_book">Friends in address book</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="enter">Enter</string>
    <string name="full_name">Full name*</string>
    <string name="dateofbirth_Require">Date of birth *</string>
    <string name="_01_20_1988">01/20/1988</string>
    <string name="present_address_required">Present address *</string>
    <string name="email">Email</string>
    <string name="enter_the_6_digit_code">Enter the 6-digit code</string>
    <string name="no_verification_code_received">No verification code received?</string>
    <string name="what_do_you_want_to_do">What do you want to do</string>
    <string name="frequency">Frequency:</string>
    <string name="contact_details">Contact details</string>
    <string name="name1">Name:</string>
    <string name="phone_number1">Phone number:</string>
    <string name="recurring_transfers">Recurring transfers</string>
    <string name="next_transfer_date1">Next transfer date:</string>
    <string name="daily">Daily</string>
    <string name="active">Active</string>
    <string name="your_next_transfer_will_occur_on_01_april">Your next transfer will occur on 01 April</string>
    <string name="transfer_from">Transfer from:</string>
    <string name="gif">GIF</string>
    <string name="forgot">FORGOT?</string>
    <string name="beneficiary_settings">Beneficiary settings</string>
    <string name="beneficiary_name">Beneficiary name</string>
    <string name="delete_beneficiary">Delete beneficiary</string>
    <string name="business">Business</string>
    <string name="pay">Pay</string>
    <string name="tricking">Issue Ticket</string>
    <string name="docs_info_update">Docs/Info Update</string>
    <string name="ticket_refund">Ticket Refund</string>
    <string name="re_issue">Re-issue</string>
    <string name="ticket_void">Ticket Void</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="airport_name">Airport Name: </string>
    <string name="terminal">Terminal:</string>
    <string name="city_code">City Code: </string>
    <string name="city_name">City Name: </string>
    <string name="country_code">Country code: </string>
    <string name="country_name">Country name: </string>
    <string name="airport_code">Airport Code: </string>
</resources>