<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_1"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <TextView
                android:id="@+id/button_2"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

            <TextView
                android:id="@+id/button_3"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_4"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />

            <TextView
                android:id="@+id/button_5"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5" />

            <TextView
                android:id="@+id/button_6"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_7"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7" />

            <TextView
                android:id="@+id/button_8"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8" />

            <TextView
                android:id="@+id/button_9"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_9" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_21dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/forgot"
                android:textColor="@color/keypad_text_clr"
                android:textSize="16.7sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/button_0"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0" />

            <TextView
                android:id="@+id/button_enter"
                style="@style/text_style_for_custom_keyboard_with_forget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enter"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</merge>