<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <Button
        android:id="@+id/btAction"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#5AC121"
        android:gravity="center"
        android:text="@string/tricking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        />

    <Button
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/btActionDocsInfoUpdate"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#5AC121"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/docs_info_update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        />

    <Button
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/btActionReissue"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#5AC121"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/re_issue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"
        />

    <Button
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/btCencel"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#f36743"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/cancel_booking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <Button
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/btTicketRefund"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#f36743"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ticket_refund"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        />


    <Button
        android:id="@+id/btTicketVoid"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#f36743"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ticket_void"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        />


</LinearLayout>