<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView405"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/beneficiary_settings"
        android:textColor="@color/keypad_text_clr"
        android:textSize="@dimen/_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/common_clr"
        android:textSize="@dimen/_10sp"
        style="@style/text_style"
        android:id="@+id/textView406"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/beneficiary_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView405" />

    <TextView
        android:textColor="@color/keypad_text_clr"
        android:textSize="@dimen/_14sp"
        style="@style/medium_text_style"
        android:id="@+id/textView407"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Independent Television"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView406" />

    <TextView
        android:textColor="@color/color_red"
        android:textSize="@dimen/_12sp"
        style="@style/text_style"
        android:id="@+id/delate_beneficiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/delete_beneficiary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView407" />
</androidx.constraintlayout.widget.ConstraintLayout>